tried and failed at some css, more research needed

--- a/sass/input.scss
+++ b/sass/input.scss
@@ -3,7 +3,7 @@ $font-stack: Arial;
 
 //Body
 body {
-  font: 100% $font-stack;
+  font: $font-stack;
 }
 
 //Logo
@@ -15,7 +15,6 @@ body {
   padding-bottom: 52px;
 }
 
-//Banner
 
 //Middle Text
 
