--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import 'modules/all';
+
 //Variables
 $font-stack: Arial;
 
@@ -12,7 +14,8 @@ body {
   width: 317px;
   padding-left: 36px;
   padding-top: 64px;
-  padding-bottom: 52px;
+  padding-bottom: 52px;  padding-right: initial;
+
 }
 
 
