--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,64 +1,3 @@
 @import 'modules/all';
-
-//Variables
-$font-stack: Arial;
-
-//Body
-body {
-  font: $font-stack;
-}
-
-//Logo
-.logo {
-  height: 35px;
-  width: 317px;
-  padding-left: 36px;
-  padding-top: 64px;
-  padding-bottom: 52px;  padding-right: initial;
-
-}
-
-
-//Middle Text
-
-//Pics and Quotes
-
-//Footer
-
-/* Icons */
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-}
-
-/* Icon Hover */
-.fa:hover {
-  opacity: 0.7;
-}
-
-/* Facebook */
-.fa-facebook {
-  background: #3b5998;
-  color: white;
-}
-
-/* Twitter */
-.fa-twitter {
-  background: #55acee;
-  color: white;
-}
-
-/* Linked-In */
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-/* YouTube */
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
+@import 'vendor/normalize';
+@import 'partials/all';
