cleaned up and switched sass compilers

--- a/scss/partials/_banner.scss
+++ b/scss/partials/_banner.scss
@@ -6,15 +6,30 @@
     display: flex;
   }
 
-  .vector-graphic {
-    top: 151px;
-    left: 615px;
-    right: 0;
-    bottom: 0;
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-  }
 
   h1, p {
     text-align: center;
+  }
+
+  h1::after {
+    content: '';
+    margin: 0 auto;
+    display: block;
+    width: 30%;
+    height: 2px;  
+    color: $dark-green;
+  }
+
+  .career-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    button {
+      height: 40px;
+      width: 165px;
+      background-color: $orange;
+      color: white;
+    }
   }
 }
