--- a/scss/main.css
+++ b/scss/main.css
@@ -279,23 +279,22 @@ body {
 
 h1 {
   color: #00945f;
-  line-height: 1;
   font-size: 30pt;
+  margin: 0;
 }
 
 h2 {
   color: #00945f;
-  line-height: 1;
   font-size: 24pt;
-}
-
-h1, h2, p {
-  margin-top: 0;
-  margin-bottom: 1em;
+  margin: 0;
 }
 
 img {
   max-width: 100%;
+}
+
+hr {
+  width: 5%;
 }
 
 .logo {
@@ -311,6 +310,15 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.banner h1 {
+  padding-top: 64px;
+  padding-bottom: 0px;
+}
+
+.banner p {
+  font-size: 30pt;
 }
 
 .banner h1, .banner p {
@@ -342,6 +350,72 @@ img {
   height: 40px;
   width: 165px;
   background-color: #e97300;
+  font-size: 18pt;
   color: white;
+  text-align: center;
+  border: none;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 44px;
+}
+
+.flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding-bottom: 62px;
+  padding-left: 36px;
+}
+
+.flex-container h2 {
+  padding-top: 41px;
+  text-align: left;
+  font-size: 24pt;
+}
+
+.flex-container .vl {
+  position: flex;
+  height: 143px;
+  border-left: 1px solid;
+  padding-right: 42px;
+  padding-bottom: 150px;
+  color: #c0c0c0;
+}
+
+.flex-container .unique-products, .flex-container .exceptional-support, .flex-container .closing-time, .flex-container .voice {
+  height: 25vw;
+  width: 40vw;
+  padding-left: 36px;
+  padding-right: 82px;
+  text-align: left;
+  font-size: 18pt;
+}
+
+.box-break {
+  background-color: #00945f;
+  width: 95vw;
+  height: 56px;
+  margin: 32px;
+}
+
+.box-break h2 {
+  text-align: center;
+  font-size: 24pt;
+  color: white;
+}
+
+.box-break p {
+  background-color: #00945f;
+  width: 95vw;
+  height: 56px;
+  margin: 20px;
+  text-align: left;
+  font-size: 18px;
 }
 /*# sourceMappingURL=main.css.map */
