--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -6,21 +6,21 @@ body {
 
 h1 {
   color: $dark-green;
-  line-height: 1;
   font-size: 30pt;
+  margin: 0;
 }
 
 h2 {
   color: $dark-green;
-  line-height: 1;
   font-size: 24pt;
+  margin: 0;
 }
 
-h1, h2, p {
-    margin-top: 0;
-    margin-bottom: 1em;
-}
 
 img {
   max-width: 100%;
+}
+
+hr {
+  width: 5%;
 }
