--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -1,5 +1,5 @@
-@import 'base';
-@import 'logo';
-@import 'banner';
-@import 'about';
-@import 'testimony';
+@import "base";
+@import "logo";
+@import "banner";
+@import "about";
+@import "testimony";
