--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -6,10 +6,11 @@ h1 {
 .flex-container-1 {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
+  position: center;
   align-content: center;
-  padding-bottom: 62px;
-  padding-left: 36px;
+  justify-content: space-evenly;
+  padding-bottom: 54px;
+
 
   h2 {
     padding-top: 41px;
@@ -17,16 +18,8 @@ h1 {
     font-size: 24pt;
   }
 
-  .vl {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    bottom: 0;
-    margin: 0;
-    border: none;
-    height: 143px;
-    border-left: 1px solid;
-    color: #c0c0c0;
+  .br {
+    color: black;
   }
 
   .unique-products,
@@ -34,9 +27,8 @@ h1 {
   .closing-time,
   .voice {
     height: 110px;
-    width: 800px;
-    padding-left: 36px;
-    padding-bottom: 152px;
+    width: 700px;
+    padding-bottom: 300px;
     text-align: left;
     font-size: 18pt;
   }
