--- a/scss/main.css
+++ b/scss/main.css
@@ -20,10 +20,6 @@ img {
   max-width: 100%;
 }
 
-hr {
-  width: 5%;
-}
-
 .logo {
   height: 35px;
   width: 317px;
@@ -51,6 +47,10 @@ hr {
 .banner h1,
 .banner p {
   text-align: center;
+}
+
+.banner hr {
+  width: 5%;
 }
 
 .banner h1::after {
@@ -110,10 +110,6 @@ h1 {
   font-size: 24pt;
 }
 
-.flex-container-1 .br {
-  color: black;
-}
-
 .flex-container-1 .unique-products,
 .flex-container-1 .exceptional-support,
 .flex-container-1 .closing-time,
@@ -125,26 +121,116 @@ h1 {
   font-size: 18pt;
 }
 
-.box-break {
-  background-color: #00945f;
-  width: 95vw;
-  height: 56px;
-  margin: 32px;
+.flex-container-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
 }
 
-.box-break h2 {
+.flex-container-2 .box-break {
+  background-color: #00945f;
+  width: 95vw;
+  height: 57px auto;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  position: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flex-container-2 .box-break h2 {
   text-align: center;
   font-size: 24pt;
   color: white;
 }
 
-.box-break p {
-  background-color: #00945f;
+.flex-container-2 .box-para {
   width: 95vw;
-  height: 56px;
-  margin: 20px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  position: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flex-container-2 .box-para p {
+  margin-top: 0;
+  background-color: #ebf7f5;
+  color: #888888;
+  width: 95vw;
+  height: 177px auto;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 50px;
+  font-size: 18pt;
+}
+
+.flex-container-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding-bottom: 300px;
+}
+
+.flex-container-3 h2 {
+  padding-top: 41px;
   text-align: left;
-  font-size: 18px;
+  font-size: 24pt;
+}
+
+.flex-container-3 .br {
+  width: 100vh;
+  color: black;
+}
+
+.flex-container-3 .profile-1,
+.flex-container-3 .profile-2,
+.flex-container-3 .profile-3 {
+  height: 110px;
+  width: 500px;
+  text-align: left;
+  font-size: 12pt;
+}
+
+hr {
+  width: 100vw;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
