--- a/scss/partials/_banner.scss
+++ b/scss/partials/_banner.scss
@@ -19,7 +19,9 @@
   }
   
   hr {
-    width: 5%;
+    border: 1px solid $dark-green;
+    border-radius: 1px;
+    max-width: 73px;
   }
 
   h1::after {
