--- a/scss/partials/_testimony.scss
+++ b/scss/partials/_testimony.scss
@@ -1,3 +1,5 @@
+//Text Box
+
 .flex-container-2 {
   display: flex;
   flex-wrap: wrap;
@@ -17,7 +19,6 @@
     position: center;
     align-content: center;
     align-items: center;
-
 
     h2 {
       text-align: center;
@@ -48,12 +49,13 @@
     }
   }
 }
+
+// Employee Testimony
 .flex-container-3 {
   display: flex;
   flex-wrap: wrap;
   position: center;
-  align-content: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding-bottom: 300px;
 
   h2 {
@@ -72,7 +74,19 @@
   .profile-3 {
     height: 110px;
     width: 500px;
-    text-align: left;
-    font-size: 12pt;
+    text-align: center;
+
+
+    p {
+      font-style: italic;
+      font-size: 19.35085pt;
+      color: rgba(102, 102, 102, 255);
+      text-align: center;
+    }
+    h3 {
+      font-size: 19.35085pt;
+      color: rgba(0, 148, 95, 255);
+      text-align: center;
+    }
   }
 }
